--- a/src/app/admin/export/export.component.html
+++ b/src/app/admin/export/export.component.html
@@ -155,28 +155,34 @@
 
                         <div class="example-container mat-elevation-z8">
 
-                          <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
+                          <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort matSortStart="desc">
 
                             <!-- Name Column -->
-                            <ng-container matColumnDef="Name">
+                            <ng-container matColumnDef="firstname">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.firstname}} {{row.middlename}} {{row.lastname}} </mat-cell>
                             </ng-container>
 
                             <!-- UniqueID Column -->
-                            <ng-container matColumnDef="Unique ID">
+                            <ng-container matColumnDef="uniqueId">
                               <mat-header-cell *matHeaderCellDef mat-sort-header>Unique ID </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.uniqueId | uppercase}} </mat-cell>
                             </ng-container>
 
+                            <!-- ID Type Column -->
+                            <ng-container matColumnDef="verifiedIdType">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> ID Type </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.verifiedIdType}} </mat-cell>
+                            </ng-container>
+
                             <!-- ID Column -->
-                            <ng-container matColumnDef="ID No">
+                            <ng-container matColumnDef="verifiedId">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> ID No </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.verifiedId}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
-                            <ng-container matColumnDef="Gender">
+                            <ng-container matColumnDef="gender">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Gender </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.gender}} </mat-cell>
                             </ng-container>
@@ -188,26 +194,26 @@
                               </ng-container>
 
                             <!-- Color Column -->
-                            <ng-container matColumnDef="Branch">
+                            <ng-container matColumnDef="branch">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Branch </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.branch}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
-                            <ng-container matColumnDef="Zone">
+                            <ng-container matColumnDef="zone">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Zone 
                               </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.zone}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
-                            <ng-container matColumnDef="State">
+                            <ng-container matColumnDef="state">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> State </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
                             </ng-container>
 
                             <!-- Color Column -->
-                            <ng-container matColumnDef="Unit">
+                            <ng-container matColumnDef="unit">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Unit
                               </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.unit}} </mat-cell>
@@ -224,7 +230,7 @@
                             </mat-row>
                           </mat-table>
 
-                          <mat-paginator [pageSizeOptions]="[50, 100, 200, 500]"></mat-paginator>
+                          <mat-paginator [pageSizeOptions]="[50, 100, 200, 500]" showFirstLastButtons></mat-paginator>
 
                            <!-- Row shown when there is no matching data. -->
                           <tr class="mat-row" *matNoDataRow>
