--- a/src/app/admin/view-excos/view-excos.component.html
+++ b/src/app/admin/view-excos/view-excos.component.html
@@ -153,25 +153,25 @@
                           <mat-table  matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
 
                             <!-- Name Column -->
-                            <ng-container matColumnDef="Name">
+                            <ng-container matColumnDef="name">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.name }} </mat-cell>
                             </ng-container>
 
                             <!-- Email Column -->
-                            <ng-container matColumnDef="Email">
+                            <ng-container matColumnDef="email">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
                             </ng-container>
 
                             <!-- DateAdded Column -->
-                            <ng-container matColumnDef="Added On">
+                            <ng-container matColumnDef="updatedAt">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Added On </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.updatedAt | date}} </mat-cell>
                             </ng-container>
 
                             <!-- Status Column -->
-                            <ng-container matColumnDef="Status">
+                            <ng-container matColumnDef="is_active">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.is_active? 'Active' : 'Disabled' }} </mat-cell>
                             </ng-container>
