--- a/src/app/agent/agent-dashboard/agent-dashboard.component.html
+++ b/src/app/agent/agent-dashboard/agent-dashboard.component.html
@@ -135,31 +135,31 @@
                           <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
 
                             <!-- Name Column -->
-                            <ng-container matColumnDef="Name">
+                            <ng-container matColumnDef="firstname">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.firstname}} {{row.middlename}} {{row.lastname}} </mat-cell>
                             </ng-container>
 
                             <!-- UniqueID Column -->
-                            <ng-container matColumnDef="Unique Id">
+                            <ng-container matColumnDef="uniqueId">
                               <mat-header-cell *matHeaderCellDef mat-sort-header>Unique ID </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.uniqueId | uppercase}} </mat-cell>
                             </ng-container>
 
                             <!-- Email Column -->
-                            <ng-container matColumnDef="Email">
+                            <ng-container matColumnDef="email">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
                             </ng-container>
 
                             <!-- Gender Column -->
-                            <ng-container matColumnDef="Gender">
+                            <ng-container matColumnDef="gender">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Gender </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.gender}} </mat-cell>
                             </ng-container>
 
                             <!-- DOB Column -->
-                            <ng-container matColumnDef="D.O.B">
+                            <ng-container matColumnDef="dob">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> D.O.B </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.dob}} </mat-cell>
                             </ng-container>
@@ -171,26 +171,26 @@
                             </ng-container>
 
                              <!-- Branch Column -->
-                             <ng-container matColumnDef="Branch">
+                             <ng-container matColumnDef="branch">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Branch </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.branch}} </mat-cell>
                             </ng-container>
 
                             <!-- Zone Column -->
-                            <ng-container matColumnDef="Zone">
+                            <ng-container matColumnDef="zone">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Zone 
                               </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.zone}} </mat-cell>
                             </ng-container>
 
                             <!-- State Column -->
-                            <ng-container matColumnDef="State">
+                            <ng-container matColumnDef="state">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> State </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
                             </ng-container>
 
                             <!-- Unit Column -->
-                            <ng-container matColumnDef="Unit">
+                            <ng-container matColumnDef="unit">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Unit
                               </mat-header-cell>
                               <mat-cell *matCellDef="let row"> {{row.unit}} </mat-cell>
