--- a/src/app/admin/view-excos/view-excos.component.html
+++ b/src/app/admin/view-excos/view-excos.component.html
@@ -150,7 +150,7 @@
                         <div class="example-container mat-elevation-z8">
 
 
-                          <mat-table  matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
+                          <mat-table  matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort matSortStart="desc">
 
                             <!-- Name Column -->
                             <ng-container matColumnDef="name">
