--- a/src/app/admin/view-agent/view-agent.component.html
+++ b/src/app/admin/view-agent/view-agent.component.html
@@ -145,7 +145,7 @@
                           </mat-form-field>
                           <div class="example-container mat-elevation-z8">
   
-                            <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
+                            <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort matSortStart="desc">
   
                               <!-- Name Column -->
                               <ng-container matColumnDef="firstname">
