--- a/src/app/agent/agent-dashboard/agent-dashboard.component.html
+++ b/src/app/agent/agent-dashboard/agent-dashboard.component.html
@@ -132,7 +132,7 @@
                         </mat-form-field>
                         <div class="example-container mat-elevation-z8" >
 
-                          <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort>
+                          <mat-table matTableExporter #exporter="matTableExporter" [dataSource]="dataSource" matSort matSortStart="desc">
 
                             <!-- Name Column -->
                             <ng-container matColumnDef="firstname">
