--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,19 +6,14 @@
           <div class="auto-form-wrapper">
             <form [formGroup]="credentialsForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
-                <label class="label">Email</label>
+                <label class="label">Unique ID</label>
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Email" formControlName="email">
+                  <input type="text" class="form-control" placeholder="Unique ID" formControlName="uniqueId">
                   <div class="input-group-append">
                     <span class="input-group-text">
                       <i class="mdi mdi-check-circle-outline"></i>
                     </span>
                   </div>
-                  <div *ngIf="!credentialsForm.controls.email.valid &&
-            credentialsForm.controls.email.dirty"
-            class="validator-error">
-        <p>Enter a valid Email</p>
-        </div>
                 </div>
               </div>
               <div class="form-group">
