Preparing for further update

--- a/src/app/admin/export/export.component.html
+++ b/src/app/admin/export/export.component.html
@@ -117,7 +117,7 @@
                     <div class="card text-white">
                       <div class="card-body">
                         <div class="d-flex justify-content-between pb-2 align-items-center">
-                          <h2 class="font-weight-semibold mb-0">{{ counts?.userCount }}</h2>
+                          <h2 class="font-weight-semibold mb-0">{{ totalUsers }}</h2>
                           <div class="icon-holder">
                             <i class="mdi mdi-briefcase-outline"></i>
                           </div>
@@ -230,7 +230,8 @@
                             </mat-row>
                           </mat-table>
 
-                          <mat-paginator [pageSizeOptions]="[50, 100, 200, 500]" showFirstLastButtons></mat-paginator>
+                          <mat-paginator *ngIf="users.length > 0" class="mt-5" [length]="totalUsers" [pageSize]="postPerPage" [pageSizeOptions]="pageSizeOptions" (page) = onChangedPage($event)>
+                          </mat-paginator>
 
                            <!-- Row shown when there is no matching data. -->
                           <tr class="mat-row" *matNoDataRow>
