--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -182,9 +182,71 @@
 
                         <div class="example-header">
                           <mat-form-field>
-                            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
                           </mat-form-field>
+                          <div class="col-md-6 col-sm-12 form-group">
+                            <label for="inputState">Select Filter</label>
+                            <select class="form-control search-form" [(ngModel)]="selectedFilter" (change)="activateButton()">
+                                <option *ngFor="let item of filters">{{item}}</option>
+                            </select>
+                          </div>
                         </div>
+
+                        <!--Check here-->
+
+                        <form [formGroup]="credentialsForm" class="p-2">
+                    
+                          <!-- if selectedFilter is Branch-->
+                          <div class="form-row" *ngIf="selectedFilter == 'Branch'">
+                              <div class="form-group col-md-6">
+                                  <label for="inputState">Branch</label>
+                                  <select formControlName="branch" class="form-control dash-form-control" (change) = "selectState($event.target.value)"
+                                  [ngClass]="{ 'is-invalid': credentialsForm.controls.branch.invalid && (credentialsForm.controls.branch.dirty
+                                  || credentialsForm.controls.branch.touched)}">
+                                      <option *ngFor="let branch of branches">{{ branch }}</option>
+                                  </select>
+                              </div>
+                              
+                          </div>
+
+                           <!-- if selectedFilter is Agent-->
+                          <div class="form-row" *ngIf="selectedFilter == 'Agent'">
+                            <div class="form-group col-md-6">
+                              <label for="inputLocalGovt">Agent</label>
+                              <select formControlName="agent" class="form-control dash-form-control"
+                              [ngClass]="{ 'is-invalid': credentialsForm.controls.agent.invalid && (credentialsForm.controls.agent.dirty
+                              || credentialsForm.controls.agent.touched)}">
+                                  <option *ngFor="let agent of agents">{{ agent }}</option>
+                              </select>
+                            </div>
+                          </div>
+
+                          <!-- if selectedFilter is Date-->
+                          <div class="form-row" *ngIf="selectedFilter == 'Date'">
+                              <div class="form-group col-md-6">
+                                  <mat-form-field>
+                                      <mat-label>Start date</mat-label>
+                                      <input matInput class="form-control" [matDatepicker]="picker"
+                                      formControlName="startDate">
+                                      <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
+                                      <mat-datepicker #picker></mat-datepicker>
+                                  </mat-form-field>
+                              </div>
+                              <div class="form-group col-md-6">
+                                  <mat-form-field>
+                                      <mat-label>End date</mat-label>
+                                      <input matInput class="form-control" [matDatepicker]="picker1"
+                                      formControlName="endDate">
+                                      <mat-datepicker-toggle matSuffix [for]="picker1" ></mat-datepicker-toggle>
+                                      <mat-datepicker #picker1></mat-datepicker>
+                                  </mat-form-field>
+                              </div>
+                          </div>
+
+                          <div class="mt-3" *ngIf="showButton == true">
+                              <button class="btn btn-dash mt-3" (click)="filter()">Apply</button>
+                          </div>
+                      </form>
 
                         <div class="example-container mat-elevation-z8">
 
