--- a/src/app/admin/export/export.component.html
+++ b/src/app/admin/export/export.component.html
@@ -160,7 +160,7 @@
                             <!-- Name Column -->
                             <ng-container matColumnDef="firstname">
                               <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                              <mat-cell *matCellDef="let row"> {{row.firstname}} {{row.middlename}} {{row.lastname}} </mat-cell>
+                              <mat-cell *matCellDef="let row"> {{row.firstname}} {{row.middlename}} {{row.surname}} </mat-cell>
                             </ng-container>
 
                             <!-- UniqueID Column -->
