--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -47,7 +47,7 @@
             </li>
             <li class="nav-item nav-category">Main Menu</li>
             <li class="nav-item">
-              <a class="nav-link active" routerLink="#">
+              <a class="nav-link active" routerLink="/admin/dashboard">
                 <i class="menu-icon typcn typcn-document-text"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
@@ -203,24 +203,12 @@
                                   <select formControlName="branch" class="form-control dash-form-control"
                                   [ngClass]="{ 'is-invalid': credentialsForm.controls.branch.invalid && (credentialsForm.controls.branch.dirty
                                   || credentialsForm.controls.branch.touched)}">
+                                    <option></option>
                                       <option *ngFor="let branch of branches">{{ branch }}</option>
                                   </select>
                               </div>
                               
                           </div>
-
-                           <!-- if selectedFilter is Agent-->
-                          <div class="form-row" *ngIf="selectedFilter == 'Agent'">
-                            <div class="form-group col-md-6">
-                              <label for="inputLocalGovt">Agent</label>
-                              <select formControlName="agent" class="form-control dash-form-control"
-                              [ngClass]="{ 'is-invalid': credentialsForm.controls.agent.invalid && (credentialsForm.controls.agent.dirty
-                              || credentialsForm.controls.agent.touched)}">
-                                  <option *ngFor="let agent of agents">{{ agent }}</option>
-                              </select>
-                            </div>
-                          </div>
-
                           <!-- if selectedFilter is Date-->
                           <div class="form-row" *ngIf="selectedFilter == 'Date'">
                               <div class="form-group col-md-6">
@@ -244,7 +232,7 @@
                           </div>
 
                           <div class="mt-3" *ngIf="showButton == true">
-                              <button class="btn btn-dash mt-3" (click)="filter()">Apply</button>
+                              <button class="btn btn-dash mt-3" (click)="getAllUsersWithFilter()">Apply</button>
                           </div>
                       </form>
 
