--- a/src/app/exco/validate/validate.component.html
+++ b/src/app/exco/validate/validate.component.html
@@ -51,7 +51,12 @@
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/exco/view-agent">
+              <i class="menu-icon typcn typcn-eye-outline"></i>
+              <span class="menu-title">View Agents</span>
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" routerLink="/exco/validate">
               <i class="menu-icon typcn typcn-tick"></i>
